fixd Makefile for std

--- a/classcode/testing/make-simplest/Makefile
+++ b/classcode/testing/make-simplest/Makefile
@@ -1,11 +1,12 @@
+CXXFLAGS=-std=c++11
 main: main.o fact.o
 	g++ -o main main.o fact.o
 
 main.o: main.cpp fact.h
-	g++ -c main.cpp
+	g++ $(CXXFLAGS) -c main.cpp
 
 fact.o: fact.cpp fact.h
-	g++ -c fact.cpp
+	g++ $(CXXFLAGS) -c fact.cpp
 
 
 
@@ -13,7 +14,7 @@ tests: tests.o fact.o
 	g++ -o tests tests.o fact.o
         
 tests.o: tests.cpp
-	g++ -c tests.cpp
+	g++ $(CXXFLAGS) -c tests.cpp
 
 clean:
 	rm -f main.o fact.o tests.o 
